<?xml version="1.0"?>
<package format="2">
  <name>zed_depth_sub_tutorial</name>
  <version>3.0.0</version>
  <description>This package is a tutorial showing how to subscribe to ZED depth streams</description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>

  <exec_depend>zed_wrapper</exec_depend>
</package>
